--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 <script type="text/javascript">
-  function DetectPlatform() {
+  function detectPlatform() {
       let userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
       if (/android/i.test(userAgent)) {
@@ -21,6 +21,7 @@
 </script>
 
   </head>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; connect-src 'self' https://zlengos.github.io https://*;">
   <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=1 height=1 tabindex="-1"></canvas>
