--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       }
   }
 </script>
-
   </head>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://zlengos.github.io https://*;">
+
   <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=1 height=1 tabindex="-1"></canvas>
